# construction-api

./: .gitignore  DOCS.md  README.md  pyproject.toml
data/: construction.db.example
src/construction_api/: adapters.py  database.py  dependencies.py  error_handlers.py  main.py  models.py  ports.py  schemas.py  services.py
src/construction_api/adapters/: __init__.py  dummy_repository.py  orm.py  raw_repository.py  repository.py
src/construction_api/domain/: __init__.py  entities.py
src/construction_api/routes/v1/: projects.py
tests/: conftest.py  test_projects.py
